--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -137,10 +137,10 @@ header {
     margin-inline-end: 10px;
   }
 
-  color: gold;
+  color: rgb(197, 175, 51);
   text-decoration: none;
   font-size: 3.0rem;
-  font-weight: 800;
+  font-weight: 600;
 }
 
 .menu {
@@ -202,13 +202,13 @@ header {
 }
 
 .main__creature {
-  background-color: rgb(17, 17, 74);
+  background-color: rgb(27, 27, 105);
   min-height: 90vh;
 }
 
 article {
   margin: 0 auto;
-  background-color: rgb(229, 229, 240);
+  background-color: rgb(1, 6, 37);
   padding: 20px 40px;
 }
 
@@ -340,6 +340,7 @@ a {
   & .review__item {
     padding: 40px;
     border-bottom: 1px solid rgb(156 163 175 / 0.25);
+    color: white;
   }
 
   & time {
