--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -202,7 +202,8 @@ header {
 
 .welcome-banner {
   text-align: center;
-  color: #FFD700;
+  color: rgb(197, 175, 51);
+  /*color: #FFD700;*/
   font-size: 2rem;
   font-weight: 700;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
@@ -250,7 +251,7 @@ header {
 
 .homepage-footer {
   text-align: center;
-  color: #888;
+  color: white;
   font-size: 0.8rem;
   margin: 3rem auto 2rem;
   padding: 1rem;
